# acmeDentalAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml
backend/: agent.py  guardrails.py  main.py
backend/db/: database.py  models.py
backend/routes/: admin.py  chat.py
backend/services/: email_service.py  pin_service.py
backend/tools/: __init__.py  calendly.py  clinic.py  session_tools.py
frontend/: admin.html  index.html  nginx.conf
tests/integration/: test_calendly_api.py
tests/services/: test_pin_service.py
tests/tools/: test_calendly.py  test_clinic.py
