[project]
name = "acmedentalagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
